@@ -1,7 +1,7 @@
 ##performs out-of-sample error estimation for a BART model
-k_fold_cv = function(X, y, k_folds = 5, ...){
+k_fold_cv = function(X, y, k_folds = 5, verbose = FALSE, ...){
 	if (class(X) != "data.frame"){
-		stop("X must be a data frame.")
+		stop("The training data X must be a data frame.")
 	}
 	if (!(class(y) %in% c("numeric", "integer", "factor"))){
 		stop("Your response must be either numeric, an integer or a factor with two levels.\n")
@@ -50,7 +50,7 @@ k_fold_cv = function(X, y, k_folds = 5, ...){
 		training_data_k = Xy[-c(holdout_index_i : holdout_index_f), ]
 		
    		#build bart object
-		bart_machine_cv = build_bart_machine(training_data_k[, 1 : p], training_data_k[, (p + 1)], run_in_sample = FALSE, ...)
+		bart_machine_cv = build_bart_machine(training_data_k[, 1 : p, drop = FALSE], training_data_k[, (p + 1)], run_in_sample = FALSE, verbose = verbose, ...)
 		predict_obj = bart_predict_for_test_data(bart_machine_cv, test_data_k[, 1 : p, drop = FALSE], test_data_k[, (p + 1)])
 		destroy_bart_machine(bart_machine_cv)
 		
