@@ -2,7 +2,7 @@ version 1.0.2
 
 * worked around a rJava 0.9.5 issue that surfaces when setting RAM on some new MACs
 * Upon initialization of the JVM there is now a message indicating how much maximum memory is available and a warning is thrown if the user attempts to reinitialize the RAM amount.
-* Default JVM memory is now 1.1GB which is the maximum found to initialize on 32-bit Windows machines
+* Default JVM memory is now 1.1GB which is the maximum which initializes on 32-bit Windows machines
 * Automobile data manual update
 * Removed unnecessary verbosity during model construction
 * Added a convenience alias method for setting memory
@@ -13,6 +13,8 @@ version 1.0.2
 * During covariance importance test, covariates are all permuted as a block unit to preserve collinearity structure
 * Automatic cov_importance_prior construction by downweighting factors by their number of levels
 * Added benchmark datasets
+* Bugs fixed during specification of Xy dataframe instead of X, y separately
+* Bugs fixed when using bartMachineCV on a numeric x
 * Various improvements to printed messages during runtime
 
 version 1.0.1
